--- a/Predictive Analytics/README
+++ b/Predictive Analytics/README
@@ -1,1 +1,8 @@
+This course covers the following topics:
 
+- ETS models
+- Regression models
+- ARIMA models
+- Dynamic Regression models
+- VAR models
+- Logit models
